--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "supervisor app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "supervisor": "^0.12.0"
   }
 }
