--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
