--- a/back/package.json
+++ b/back/package.json
@@ -14,8 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mqtt": "^5.8.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.4",
+    "pg": "^8.12.0",
     "supervisor": "^0.12.0"
   }
 }
