--- a/back/package.json
+++ b/back/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "faker": "^6.6.6",
     "mqtt": "^5.8.1",
     "mysql": "^2.18.1",
     "pg": "^8.12.0",
