--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "supervisor app.js"
+    "start": "supervisor app.js",
+    "mock": "node mqtt/generateMockData.js",
+    "subscribe": "node mqttClient.js"
   },
   "keywords": [],
   "author": "",
