--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "supervisor app.js",
     "mock": "node mqtt/generateMockData.js",
-    "subscribe": "node mqtt/mqttClient.js"
+    "subscribe": "supervisor mqtt/mqttClient.js"
   },
   "keywords": [],
   "author": "",
